modified:   feeturing.Ipynb

--- a/feeturing.Ipynb
+++ b/feeturing.Ipynb
@@ -81,6 +81,49 @@
     "\n",
     "print(\"Script terminé avec succès, fichier exporté.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Charger les données\n",
+    "# Base_VPVD_DAT_R = pd.read_csv(\"chemin_vers_votre_fichier.csv\")  # Exemple d'import\n",
+    "\n",
+    "# Étape 1: Calcul de `SUM_RWA_PM`\n",
+    "Base_VPVD_DAT_R[\"SUM_RWA_PM\"] = Base_VPVD_DAT_R.groupby(\"PP_CD_TIERS\")[\"PM_CIR_RWA\"].transform(\"sum\")\n",
+    "\n",
+    "# Étape 2: Calcul de `RATIO DE RWA`\n",
+    "def calculate_ratio(row):\n",
+    "    if row[\"NB_PM par PP\"] == 1:\n",
+    "        return 1\n",
+    "    elif pd.isna(row[\"PP_CD_TIERS\"]):\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        return row[\"PM_CIR_RWA\"] / row[\"SUM_RWA_PM\"]\n",
+    "\n",
+    "Base_VPVD_DAT_R[\"RATIO_DE_RWA\"] = Base_VPVD_DAT_R.apply(calculate_ratio, axis=1)\n",
+    "\n",
+    "# Étape 3: Calcul de `ALLOCATION RWA PP`\n",
+    "Base_VPVD_DAT_R[\"ALLOCATION_RWA_PP\"] = Base_VPVD_DAT_R[\"PM_CIR_RWA\"] * Base_VPVD_DAT_R[\"RATIO_DE_RWA\"]\n",
+    "\n",
+    "# Étape 4: Calcul de `SOMME RWA VD par PM`\n",
+    "Base_VPVD_DAT_R[\"SOMME_RWA_VD_par_PM\"] = Base_VPVD_DAT_R.groupby(\"PM_CD_TIERS\")[\"ALLOCATION_RWA_PP\"].transform(\"sum\")\n",
+    "\n",
+    "# Exporter le résultat (si nécessaire)\n",
+    "# Base_VPVD_DAT_R.to_csv(\"chemin_vers_le_fichier_de_sortie.csv\", index=False)\n",
+    "\n",
+    "# Affichage des premières lignes pour vérifier le résultat\n",
+    "print(Base_VPVD_DAT_R.head())\n"
+   ]
   }
  ],
  "metadata": {
