modified:   feeturing.Ipynb

--- a/feeturing.Ipynb
+++ b/feeturing.Ipynb
@@ -124,6 +124,50 @@
     "# Affichage des premières lignes pour vérifier le résultat\n",
     "print(Base_VPVD_DAT_R.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Charger votre fichier de données\n",
+    "df = pd.read_csv(\"votre_fichier.csv\")\n",
+    "\n",
+    "# Étape 1 : Créer une colonne pour le PNB non distribué\n",
+    "# Ventiler 38 MEUR sur les clients \"PRO VP Double Relation\" au prorata de leur PNB\n",
+    "total_pnb = df.loc[df[\"PM_NATURE_RELATION\"] == \"PRO VP Double Relation\", \"PM_PNB_NATIF_ART\"].sum()\n",
+    "df[\"PNB_PNB_NON_DISTRIBUE\"] = df.apply(\n",
+    "    lambda x: (38_000_000 * x[\"PM_PNB_NATIF_ART\"] / total_pnb)\n",
+    "    if x[\"PM_NATURE_RELATION\"] == \"PRO VP Double Relation\" else 0,\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "# Étape 2 : Créer une colonne pour le PNB hors marchés\n",
+    "# Ventiler XXX MEUR sur toutes les PM au prorata de leur PNB\n",
+    "total_pnb_general = df[\"PM_PNB_NATIF_ART\"].sum()\n",
+    "df[\"PNB_HORS_MARCHES\"] = df[\"PM_PNB_NATIF_ART\"].apply(lambda x: (XXX * x / total_pnb_general))\n",
+    "\n",
+    "# Étape 3 : Créer une colonne \"PNB_VPVD\" (somme des colonnes PNB)\n",
+    "df[\"PNB_VPVD\"] = df[\"PM_PNB_NATIF_ART\"] + df[\"SOMME_PNB_VD_PAR_PM\"]\n",
+    "\n",
+    "# Étape 4 : Créer une colonne \"RWA_VPVD\" (somme des colonnes RWA)\n",
+    "df[\"RWA_VPVD\"] = df[\"PM_CIR_RWA\"] + df[\"SOMME_RWA_VD\"]\n",
+    "\n",
+    "# Étape 5 : Créer une colonne \"CNR_VPVD\" (somme des colonnes CNR)\n",
+    "df[\"CNR_VPVD\"] = df[\"PM_CIR_CNR\"] + df[\"SOMME_CNR_VD\"]\n",
+    "\n",
+    "# Enregistrer le fichier final\n",
+    "df.to_csv(\"Data_processing/VPVD_Final.csv\", index=False)\n",
+    "\n",
+    "print(\"Le fichier 'VPVD_Final.csv' a été généré avec succès.\")\n"
+   ]
   }
  ],
  "metadata": {
