modified:   feeturing.Ipynb

--- a/feeturing.Ipynb
+++ b/feeturing.Ipynb
@@ -168,6 +168,54 @@
     "\n",
     "print(\"Le fichier 'VPVD_Final.csv' a été généré avec succès.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Exemple de DataFrame\n",
+    "data = {'text': [\n",
+    "    \"Bonjour le monde, Python est incroyable\",\n",
+    "    \"Données et visualisation avec des graphiques simples\",\n",
+    "    \"Le monde de la data est fascinant\",\n",
+    "    \"Python rend les analyses de données accessibles\"\n",
+    "]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Combiner toutes les lignes en un seul texte\n",
+    "text = \" \".join(df['text'])\n",
+    "\n",
+    "# Définir une liste de mots inutiles (stopwords)\n",
+    "stopwords = set(STOPWORDS)\n",
+    "stopwords.update([\"le\", \"de\", \"et\", \"la\", \"les\", \"des\", \"est\", \"avec\"])  # Ajouter vos propres mots inutiles\n",
+    "\n",
+    "# Créer le nuage de mots\n",
+    "wordcloud = WordCloud(\n",
+    "    width=800,\n",
+    "    height=400,\n",
+    "    background_color='white',\n",
+    "    stopwords=stopwords,\n",
+    "    colormap='viridis',\n",
+    "    max_words=100\n",
+    ").generate(text)\n",
+    "\n",
+    "# Afficher le nuage de mots\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "plt.axis(\"off\")  # Pas d'axes\n",
+    "plt.title(\"Nuage de Mots des Textes\", fontsize=16)\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
